--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chessville",
+  "name": "chess-farmer",
   "version": "1.0.0",
-  "description": "Chess farming game with configurable game balance",
+  "description": "Multiplayer Chess with Farming mechanics",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,11 +9,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.1.2",
-    "chess.js": "^0.12.0",
-    "body-parser": "^1.19.0"
+    "socket.io": "^4.4.1",
+    "chess.js": "^0.12.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
+  "engines": {
+    "node": "16.x"
   }
 }
