--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "chess-farmer",
+  "name": "chess-farm-game",
   "version": "1.0.0",
-  "description": "Multiplayer Chess with Farming mechanics",
+  "description": "A multiplayer chess game with farming mechanics",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^4.4.1",
-    "chess.js": "^0.12.0"
+    "body-parser": "^1.20.3",
+    "chess.js": "^1.0.0-beta.6",
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   }
 }
