--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
-    "chess.js": "^1.0.0-beta.6",
+    "chess.js": "^0.12.0",
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.0"
